@@ -1,6 +1,6 @@
 {
   "name": "simp-sudo",
-  "version": "5.4.0",
+  "version": "5.5.0",
   "author": "SIMP Team",
   "summary": "Manage sudo",
   "license": "Apache-2.0",
