@@ -64,6 +64,12 @@ describe 'sudo' do
             })}
           end
         end
+
+        context 'should create sudo::include_dir resources with an iterator' do
+          let(:hieradata) { 'sudo__include_dirs' }
+          it { is_expected.to create_sudo__include_dir('/etc/sudoers.d') }
+          it { is_expected.to create_sudo__include_dir('/etc/simp_sudoers.d') }
+        end
       end
     end
   end
